--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<!DOCTYPE html><html><head><title>AdaptiveLearn</title></head><body><h1>Welcome to AdaptiveLearn</h1></body></html>
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>AdaptiveLearn</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Welcome to AdaptiveLearn</h1>
+  <p>Select a subject to begin learning:</p>
+  <div class="subjects">
+    <div class="subject-card">Mathematics</div>
+    <div class="subject-card">Natural Sciences</div>
+    <div class="subject-card">English</div>
+  </div>
+  <script src="script.js"></script>
+</body>
+</html>
